--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -43,7 +43,7 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix">subject</i>
                     <input id="isbn13" name="isbn13" type="number" required>
-                    <label for="isbn13"><span>* </span>Add ISBN if available</label>
+                    <label for="isbn13"><span>* </span>Add ISBN (13 digits)</label>
                 </div>
             </div>
 
