--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -11,6 +11,7 @@
                     <img class="activator cslewis" src="/static/images/Generic-bookcover.jpg">
                 </div>
                 <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">
                     <p><strong>Title:</strong> {{book.title}}</p>
                     <br>
                     <p><strong>Author:</strong> {{book.authors}}</p>
