--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,20 @@
         <div class="book-suggestion">
           <div class="row">
             <div class="col s12 m6 l3 first-book">
-              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <img src="/static/images/lost connections.jpg"></img>
               <div class="book-description">
                 <p>Book Sypnosis</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                  has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Award-winning journalist Johann Hari suffered from depression since he was a child and started taking antidepressants when he was a teenager. He was told—like his entire generation—that his problem was caused by a chemical imbalance in
+                  his brain. As an adult, trained in the social sciences, he began to investigate this question—and he learned that almost everything we have been told about depression and anxiety is wrong.</p>
+              </div>
+            </div>
+
+            <div class="col s12 m6 l3">
+              <img src="/static/images/caseforchrist.jpg"></img>
+              <div class="book-description">
+                <p>Book Sypnosis</p>
+                <p>Using the dramatic scenario of an investigative journalist pursuing his story and leads, Lee Strobel uses his experience as a reporter for the Chicago Tribune to interview experts about the evidence for Christ from the fields of science,
+                  philosophy, and history..</p>
               </div>
             </div>
 
@@ -49,16 +58,7 @@
                   has been the industry's standard dummy text ever since the 1500s.</p>
               </div>
             </div>
-            
-            <div class="col s12 m6 l3">
-              <img src="/static/images/Generic-bookcover.jpg"></img>
-              <div class="book-description">
-                <p>Book Sypnosis</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                  has been the industry's standard dummy text ever since the 1500s.</p>
-              </div>
-            </div>
-            
+
             <div class="col s12 m6 l3">
               <img src="/static/images/Generic-bookcover.jpg"></img>
               <div class="book-description">
