Added new books to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,20 +51,20 @@
             </div>
 
             <div class="col s12 m6 l3">
-              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <img src="/static/images/quiet.jpg"></img>
               <div class="book-description">
                 <p>Book Sypnosis</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                  has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>At least one-third of the people we know are introverts. They are the ones who prefer listening to speaking; who innovate and create but dislike self-promotion; who favor working on their own over working in teams. It is to introverts—Rosa
+                  Parks, Chopin, Dr. Seuss, Steve Wozniak—that we owe many of the great contributions to society.</p>
               </div>
             </div>
 
             <div class="col s12 m6 l3">
-              <img src="/static/images/Generic-bookcover.jpg"></img>
+              <img src="/static/images/holeingospel.jpg"></img>
               <div class="book-description">
                 <p>Book Sypnosis</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                  has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Is our faith just about going to church, studying the Bible and avoiding the most serious sins--or does God expect more? Have we embraced the whole gospel or a gospel with a hole in it? Ten years ago, Rich Stearns came face-to-face with
+                  that question as he sat in a mud hut in Rakai, Uganda, listening to the heartbreaking story of an orphaned child.</p>
               </div>
             </div>
           </div>
