CSS minor adjustments

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
             <a href="{{url_for('index')}}" class="white-text">Jimbo's Goodreads</a>
           </div>
           <p>Search/Add/Edit/Delete all the books you want!</p>
-          <p>A site for book lovers. Let all your friends and family know about this fantastic website!</p>
+          <p>A fantastic resource for book lovers.</p>
         </div>
 
         <div class="col s12 m6 footer-social">
