--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <div class="book-suggestion-box">
       <div class="book-suggestions">
         <div class="row">
-          <h4>Jimbo's Favourites</h4>
+          <h4>Jimbo's Favourite Reads</h4>
         </div>
         <div class="book-suggestion">
           <div class="row">
