--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -28,6 +28,7 @@ h4 {
     width: 80%;
     height: 370px;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .welcome-search {
@@ -55,7 +56,7 @@ h4 {
     width: 80%;
     height: 3000px;
     margin: 0 auto;
-    font-size: 14px;
+    font-size: 1rem;
 }
 
 .book-suggestion-box p {
@@ -93,7 +94,7 @@ h4 {
 /* Search page*/
 
 .card .card-content p {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .card .card-content {
