--- a/templates/books_collection.html
+++ b/templates/books_collection.html
@@ -21,6 +21,7 @@
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p><strong>Stars:</strong> {{book.rating}}</p>
                 <p><strong>Language:</strong> {{book.language_code|upper}}</p>
                 <p><strong>No. of Pages:</strong> {{book.num_pages}}</p>
             </div>
