--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -81,6 +81,10 @@ h4 {
     margin-top: 20px;
 }
 
+.book_form .stars {
+    position: relative;
+}
+
 .add-book button {
     width: 100%;
     margin-top: 20px;
