--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -7,22 +7,22 @@
         <form action="{{ url_for('insert_book')}}" method="POST">
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix">subject</i>
+                    <i class="material-icons prefix">library_books</i>
                     <input id="title" name="title" type="text" value="{{book.title}}" required>
                     <label for="title"><span>* </span>Add Title</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix">subject</i>
-                    <input id="author" name="authors" type="text" value="{{book.authors}}"  required>
+                    <i class="material-icons prefix">person</i>
+                    <input id="author" name="authors" type="text" value="{{book.authors}}" required>
                     <label for="author"><span>* </span>Add Author</label>
                 </div>
             </div>
 
-    <div class="row">
-        <div class="input-field col s12 m6">
-            <select id="language" name="language_code" required>
+            <div class="row">
+                <div class="input-field col s12 m6">
+                    <select id="language" name="language_code" required>
           <option value="" disabed selected>Choose language</option>
             {% if book.language_code == "eng" %}
              <option value="eng" selected>eng</option>
@@ -36,9 +36,9 @@
             <option value="en-US">en-US</option>  
             {% endif %}
         </select>
-            <label><span>* </span>language Select</label>
-        </div>
-    </div>
+                    <label><span>* </span>language Select</label>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="input-field col s12">
@@ -50,7 +50,17 @@
 
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix">subject</i>
+                    <i class="material-icons prefix stars">star</i>
+                    <label class="active" for="rating">* Stars (0-5)</label>
+                    <p class="range-field stars">
+                        <input type="range" id="stars" name="stars" min="0" max="5" value="{{book.rating}}" required/>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">gesture</i>
                     <input id="isbn13" name="isbn13" type="number" value="{{book.isbn13}}" required>
                     <label for="isbn13"><span>* </span>Add ISBN if available</label>
                 </div>
@@ -64,7 +74,7 @@
             </div>
 
         </form>
+
     </div>
 </div>
-
 {% endblock %}
