--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -53,7 +53,7 @@
                     <i class="material-icons prefix stars">star</i>
                     <label class="active" for="rating">* Stars (0-5)</label>
                     <p class="range-field stars">
-                        <input type="range" id="stars" name="stars" min="0" max="5" value="{{book.rating}}" required/>
+                        <input type="range" id="rating" name="rating" min="0" max="5" value="{{book.rating}}" required/>
                     </p>
                 </div>
             </div>
