--- a/templates/books_collection.html
+++ b/templates/books_collection.html
@@ -11,8 +11,8 @@
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">
-                        <p><strong>Title:</strong> {{book.title}}</p>
-                        <p><strong>Author:</strong> {{book.authors}}</p>
+                        <p><strong>Title:</strong> {{book.title|title}}</p>
+                        <p><strong>Author:</strong> {{book.authors|title}}</p>
                              <div class="card-action">
                         <i class="material-icons right">more_vert</i></span>
                     <p><a href="{{url_for('edit_book', book_id=book._id)}}">Edit</a></p>
