--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="book_form">
-        <form action="{{ url_for('insert_book')}}" method="POST">
+        <form action="{{ url_for('update_book', book_id=book._id)}}" method="POST">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">library_books</i>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="row add-book">
-                <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Upate Book
+                <button class="btn waves-effect waves-light orange darken-4" type="submit" name="action">Update Book
         <i class="material-icons right">playlist_add</i>
       </button>
                 <a href="{{url_for('get_books')}}" class="btn waves-effect waves-light red accent-4"><i class="material-icons right">cancel</i>Cancel</a>
