--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -27,7 +27,7 @@
               <option value="eng">eng</option>
               <option value="en-US">en-US</option>
         </select>
-                    <label><span>* </span>Add Language</label>
+                    <label><span>* </span>Language</label>
                 </div>
             </div>
 
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix stars">star</i>
-                    <label class="active" for="rating">* Stars (0-5)</label>
+                    <label class="active" for="rating">* Rating (0-5)</label>
                     <p class="range-field stars">
                         <input type="range" id="rating" name="rating" min="0" max="5" required/>
                     </p>
