--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -36,7 +36,7 @@
             <option value="en-US">en-US</option>  
             {% endif %}
         </select>
-                    <label><span>* </span>language Select</label>
+                    <label><span>* </span>Language</label>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix stars">star</i>
-                    <label class="active" for="rating">* Stars (0-5)</label>
+                    <label class="active" for="rating">* Rating (0-5)</label>
                     <p class="range-field stars">
                         <input type="range" id="rating" name="rating" min="0" max="5" value="{{book.rating}}" required/>
                     </p>
