--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -46,6 +46,10 @@ h4 {
     text-align: center;
 }
 
+.welcome-search input {
+    text-align: center;
+}
+
 .book-suggestion-box {
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(6px);
