--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div class="container-fluid welcome">
   <div class="row">
     <div class="welcome-box">
-      <div class="welcome-search">
+      <div class="`arch">
         <div class="row">
           <h1>Welcome to</br> Jimbo's Goodreads</h1>
         </div>
